# opencv-study

./: CMakeLists.txt  main.cpp
common_api/: TimeHelper.hpp
cv_api/: common.hpp  image_cv.hpp  image_process.hpp  read.hpp
data/: day_lldw2.3gp  night_rldw2.3gp
